<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".PokemonViewActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                />

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="1054dp" />

        <TextView
            android:id="@+id/pokemonName"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <ImageView
            android:id="@+id/normalSprite"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="loadSpriteView"
            app:layout_constraintEnd_toStartOf="@+id/shinySprite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeOne" />

        <ImageView
            android:id="@+id/shinySprite"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="loadSpriteView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/normalSprite"
            app:layout_constraintTop_toBottomOf="@+id/typeTwo" />

        <TextView
            android:id="@+id/oneTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_corners"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonName" />

        <TextView
            android:id="@+id/typeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corners"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/typeTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonName" />

        <TextView
            android:id="@+id/typeTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_corners"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/typeOne"
            app:layout_constraintTop_toBottomOf="@+id/pokemonName" />

        <TextView
            android:id="@+id/normalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/normal_label"
            app:layout_constraintStart_toStartOf="@+id/normalSprite"
            app:layout_constraintTop_toBottomOf="@+id/normalSprite" />

        <TextView
            android:id="@+id/shinyLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/shiny_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/shinySprite"
            app:layout_constraintTop_toBottomOf="@+id/shinySprite" />

        <TextView
            android:id="@+id/movesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/moves_label"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abilitiesView" />

        <TextView
            android:id="@+id/abilitiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/abilities_label"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normalSprite" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movesView"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movesLabel" />

        <ImageButton
            android:id="@+id/nextPokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="244dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:onClick="nextPokemon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/previousPokemon"
            app:layout_constraintTop_toTopOf="@+id/pokemonName"
            app:srcCompat="@android:drawable/ic_media_ff" />

        <ImageButton
            android:id="@+id/previousPokemon"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="252dp"
            android:onClick="prevPokemon"
            app:layout_constraintRight_toLeftOf="@+id/nextPokemon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pokemonName"
            app:srcCompat="@android:drawable/ic_media_rew" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/abilitiesView"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abilitiesLabel" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>